--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="container" id="main">
 
-		<div class="navbar navbar-fixed-top">
+		
 
 			<div class="navbar navbar-fixed-top">
 				<div class="container">
@@ -108,10 +108,10 @@
 				</div><!-- end container -->
 			</div><!-- end navbar -->
 			
-		</div><!-- end navbar -->
 		
 		
-		<div class="carousel slide" id="myCarousel">
+		
+		
 
 			<div class="carousel slide" id="myCarousel">
 
@@ -152,10 +152,10 @@
 			
 			</div><!-- end myCarousel -->
 		
-		</div><!-- end myCarousel -->
 		
 		
-		<div class="row" id="bigCallout">
+		
+		
 
 			<div class="row" id="bigCallout">
 				<div class="col-12">
@@ -186,10 +186,10 @@
 				</div><!-- end col-12 -->
 			</div><!-- end bigCallout -->
 	
-		</div><!-- end row -->
 		
 		
-		<div class="row" id="featuresHeading">
+		
+		
 
 			<div class="row" id="featuresHeading">
 				<div class="col-12">
@@ -240,7 +240,7 @@
 				</div><!-- end feature -->
 			</div><!-- end features -->
 	
-		</div><!-- end row -->
+		
 		
 		
 		<div class="row" id="features">
@@ -291,8 +291,8 @@
 
                 <h3>A List Group</h3>
 
-				<div class="d-flex flex-column  mb-3 border " id="work">
-					<div class="p-2">
+				<div class="d-flex flex-column  mb-3" id="work">
+					<div class="p-2 ">
 						<h3>Kale</h3>
 						<p>Kale or leaf cabbage is one of certain cultivars of cabbage grown for their edible leaves, although some are used as ornamentals. Kale plants have green or purple leaves, and the central leaves do not form a head</p>
 					</div>
@@ -373,7 +373,7 @@
 		</div><!-- end row -->
 		
 		
-		<div class="row" id="moreCourses">
+		
 
 			<div class="row" id="moreCourses">
 				<div class="col-12">
@@ -414,7 +414,7 @@
 				</div><!-- end col-12 -->
 			</div><!-- end moreCourses -->
 			
-		</div><!-- end row -->
+		
 		
 	</div><!-- end container -->
 	
